Finish tests for email-security-config. Replace cucumber with allure for brevity's sake.